# dvplogger

./: .gitignore  .gitignore.swp  LICENSE  README.md
dvplogger/: CMakeLists.txt  add_spdx.sh  partitions.csv  sdkconfig  sdkconfig.old
dvplogger/components/arduino/: CMakeLists.txt
dvplogger/components/arduino/libraries/Adafruit_TinyUSB_Arduino-3.4.4/src/arduino/ports/esp32/: tusb_config_esp32.h
dvplogger/components/arduino/libraries/ESP32_FTPServer_SD/: ESP32FtpServer.cpp
dvplogger/components/arduino/libraries/RTClib-master/src/: RTC_DS1307.cpp
dvplogger/components/arduino/libraries/USB_Host_Shield_2.0-1.7.0/: UsbCore.h  avrpins.h  cdcacm.cpp  cdcacm.h  cdcacm_250505.cpp
dvplogger/components/arduino/libraries/ch9350ifLibrary/: library.properties
dvplogger/components/arduino/libraries/ch9350ifLibrary/examples/ch9350_hobonicola/: ch9350_hobonicola.ino  device_setup.h
dvplogger/components/arduino/libraries/ch9350ifLibrary/examples/dump_frame/: dump_frame.ino
dvplogger/components/arduino/libraries/ch9350ifLibrary/examples/dump_frame_led/: dump_frame_led.ino
dvplogger/components/arduino/libraries/ch9350ifLibrary/examples/dump_keycode/: dump_keycode.ino
dvplogger/components/arduino/libraries/ch9350ifLibrary/examples/show_modifiers/: show_modifiers.ino
dvplogger/components/arduino/libraries/ch9350ifLibrary/src/: ch9350if.cpp  ch9350if.h  ch9350if_hidkeys.h  ch9350if_settings.h
dvplogger/components/arduino/libraries/esp-multiap/: espwmap.cpp  espwmap.h
dvplogger/components/esp-serial-flasher/: CMakeLists.txt
dvplogger/components/esp-serial-flasher/examples/esp32_example/main/: main.c
dvplogger/components/esp-serial-flasher/examples/esp32_read_flash_example/main/: main.c
dvplogger/components/esp-serial-flasher/port/: esp32_port.c  esp32_port.c~  esp32_port.h
dvplogger/main/: AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  Plan13.cpp  Plan13.h  RingBuffer.h  adafruit_usbhost.cpp  adafruit_usbhost.h  antenna.cpp  bandmap.cpp  bandmap.h  callhist.cpp  callhist.h  callhist_fd.cpp  callhist_fd.h  cat.cpp  cat.h  cdcacm.cpp  cdcacm.h  cluster.cpp  cluster.h  cmd_interp.cpp  cmd_interp.h  console.cpp  console.h  contest.cpp  contest.h  cty.cpp  cty.h  cty_chk.cpp  cty_chk.h  cw_keying.cpp  cw_keying.h  dac-adc.cpp  dac-adc.h  decl.h  display.cpp  display.h  dupechk.cpp  dupechk.h  (+64 more)
dvplogger/sd_files/: ja_sota.csv  pota-jp.csv
dvplogger/tools/: conv_cty_to_cpp.tcl
dvplogger_ext/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old  sdkconfig_bak
dvplogger_ext/components/: arduino
dvplogger_ext/main/: AudioPlayer.cpp  CMakeLists.txt  bin2array.cmake  bin2array_runner.cmake  keyboard.cpp  keyboard.h  main.cpp  main.h  mux_transport.cpp  mux_transport.h
dvplogger_ext/spiffs_data/: metanidx.txt
