idf_component_register(
SRCS "morse_decoder_simple.cpp"
SRCS "mux_transport.cpp"
SRCS "web_server.cpp"
SRCS "callhist_fd.cpp"
SRCS "multi_acag.cpp"
SRCS "multi_arrl.cpp"
SRCS "main.cpp"
SRCS "multi.cpp"
SRCS "cmd_interp.cpp"
SRCS "variables.cpp"
SRCS "sd_files.cpp"
SRCS "cw_keying.cpp"
SRCS "cat.cpp"
SRCS "usb_host.cpp"
SRCS "keyboard.cpp"
SRCS "so2r.cpp"
SRCS "display.cpp"
SRCS "log.cpp"
SRCS "edit_buf.cpp"
SRCS "dupechk.cpp"
SRCS "qso.cpp"
SRCS "callhist.cpp"
SRCS "cluster.cpp"
SRCS "bandmap.cpp"
SRCS "iambic_keyer.cpp"
SRCS "multi_process.cpp"
SRCS "mcp.cpp"
SRCS "mcp_interface.cpp"
SRCS "ui.cpp"
SRCS "Plan13.cpp"
SRCS "misc.cpp"
SRCS "settings.cpp"
SRCS "processes.cpp"
SRCS "Plan13.cpp"
SRCS "contest.cpp"
SRCS "console.cpp"
SRCS "tcp_server.cpp"
SRCS "network.cpp"
SRCS "timekeep.cpp"
SRCS "zserver.cpp"
SRCS "ringbuf.cpp"
SRCS "satellite.cpp"
SRCS "dac-adc.cpp"
SRCS "cty.cpp"
SRCS "cty_chk.cpp"
SRCS "adafruit_usbhost.cpp"
SRCS "esp32_flasher.c"
SRCS "sd_wrapper.cpp"
SRCS "AudioPlayer.cpp"
SRCS "binaries.c"
INCLUDE_DIRS ""
INCLUDE_DIRS "../components/esp-serial-flasher/examples/common/"
)
# USE_SD 定義を追加
target_compile_definitions(${COMPONENT_LIB} PRIVATE USE_SD)
